#
# ReCaged - a Free Software, Futuristic, Racing Simulator
#
# Copyright (C) 2012 Mats Wahlberg
#
# This file is part of ReCaged.
#
# ReCaged is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# ReCaged is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with ReCaged.  If not, see <http://www.gnu.org/licenses/>.
#

#TODO: check $XDG_CONFIG_DIRS. if set, use "{XDG_CONFIG_DIRS%%:*}/recaged"?
#but would cause problems with different prefixes?
confdir = $(sysconfdir)/xdg/recaged/
nobase_dist_conf_DATA = \
	profiles/default/keys.lst \
	profiles/default/profile.conf \
	tmp\ menu\ selections
