#
# RCX - a Free Software, Futuristic, Racing Game
#
# Copyright (C) 2012, 2015 Mats Wahlberg
#
# This file is part of RCX.
#
# RCX is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# RCX is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with RCX.  If not, see <http://www.gnu.org/licenses/>.
#

objectsdir = $(datadir)/games/rcx
nobase_dist_objects_DATA = \
	objects/misc/beachball/README \
	objects/misc/beachball/sphere.mtl \
	objects/misc/beachball/sphere.obj \
	objects/misc/box/box.mtl \
	objects/misc/box/box.obj \
	objects/misc/box/object.script \
	objects/misc/box/README \
	objects/misc/building/pillar.mtl \
	objects/misc/building/pillar.obj \
	objects/misc/building/README \
	objects/misc/building/roof.mtl \
	objects/misc/building/roof.obj \
	objects/misc/building/wall.mtl \
	objects/misc/building/wall.obj \
	objects/misc/flipper/Flipper.mtl \
	objects/misc/flipper/Flipper.obj \
	objects/misc/flipper/README \
	objects/misc/funbox/box.mtl \
	objects/misc/funbox/box.obj \
	objects/misc/funbox/README \
	objects/misc/NH4/Atom1.mtl \
	objects/misc/NH4/Atom1.obj \
	objects/misc/NH4/Atom2.mtl \
	objects/misc/NH4/Atom2.obj \
	objects/misc/NH4/README \
	objects/misc/pillar/Broken.mtl \
	objects/misc/pillar/Broken.obj \
	objects/misc/pillar/Pillar.mtl \
	objects/misc/pillar/Pillar.obj \
	objects/misc/pillar/README \
	objects/misc/tetrahedron/model.mtl \
	objects/misc/tetrahedron/model.obj \
	objects/misc/tetrahedron/README \
	teams/Nemesis/cars/Venom/car.conf \
	teams/Nemesis/cars/Venom/camera.conf \
	teams/Nemesis/cars/Venom/geoms.lst \
	teams/Nemesis/cars/Venom/README \
	teams/Nemesis/cars/Venom/Venom.mtl \
	teams/Nemesis/cars/Venom/Venom.obj \
	worlds/Sandbox/tracks/Box/Box.mtl \
	worlds/Sandbox/tracks/Box/Box.obj \
	worlds/Sandbox/tracks/Box/Box3.mtl \
	worlds/Sandbox/tracks/Box/Box3.obj \
	worlds/Sandbox/tracks/Box/figure_8.road \
	worlds/Sandbox/tracks/Box/geoms.lst \
	worlds/Sandbox/tracks/Box/in_a_spin.road \
	worlds/Sandbox/tracks/Box/objects.lst \
	worlds/Sandbox/tracks/Box/ramp.obj \
	worlds/Sandbox/tracks/Box/ramp.mtl \
	worlds/Sandbox/tracks/Box/README \
	worlds/Sandbox/tracks/Box/superbowl.road \
	worlds/Sandbox/tracks/Box/surfaces.mtl \
	worlds/Sandbox/tracks/Box/track.conf \
	worlds/Sandbox/tracks/Box/vertigo.road \
	worlds/Sandbox/wheels/Reckon/wheel.mtl \
	worlds/Sandbox/wheels/Reckon/wheel.conf \
	worlds/Sandbox/wheels/Reckon/wheel.obj \
	worlds/Sandbox/wheels/Reckon/README \
	worlds/Sandbox/wheels/Slipstream/wheel.mtl \
	worlds/Sandbox/wheels/Slipstream/wheel.conf \
	worlds/Sandbox/wheels/Slipstream/wheel.obj \
	worlds/Sandbox/wheels/Slipstream/README

