#
# RCX - a Free Software, Futuristic, Racing Game
#
# Copyright (C) 2012, 2015 Mats Wahlberg
#
# This file is part of RCX.
#
# RCX is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# RCX is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with RCX.  If not, see <http://www.gnu.org/licenses/>.
#

objectsdir = $(datadir)/games/rcx
nobase_dist_objects_DATA = \
	misc/beachball/README \
	misc/beachball/sphere.mtl \
	misc/beachball/sphere.obj \
	misc/box/box.mtl \
	misc/box/box.obj \
	misc/box/object.script \
	misc/box/README \
	misc/building/pillar.mtl \
	misc/building/pillar.obj \
	misc/building/README \
	misc/building/roof.mtl \
	misc/building/roof.obj \
	misc/building/wall.mtl \
	misc/building/wall.obj \
	misc/flipper/Flipper.mtl \
	misc/flipper/Flipper.obj \
	misc/flipper/README \
	misc/funbox/box.mtl \
	misc/funbox/box.obj \
	misc/funbox/README \
	misc/NH4/Atom1.mtl \
	misc/NH4/Atom1.obj \
	misc/NH4/Atom2.mtl \
	misc/NH4/Atom2.obj \
	misc/NH4/README \
	misc/pillar/Broken.mtl \
	misc/pillar/Broken.obj \
	misc/pillar/Pillar.mtl \
	misc/pillar/Pillar.obj \
	misc/pillar/README \
	misc/tetrahedron/model.mtl \
	misc/tetrahedron/model.obj \
	misc/tetrahedron/README \
	teams/Nemesis/cars/Venom/car.conf \
	teams/Nemesis/cars/Venom/camera.conf \
	teams/Nemesis/cars/Venom/geoms.lst \
	teams/Nemesis/cars/Venom/README \
	teams/Nemesis/cars/Venom/Venom.mtl \
	teams/Nemesis/cars/Venom/Venom.obj \
	wheels/Reckon/wheel.mtl \
	wheels/Reckon/wheel.conf \
	wheels/Reckon/wheel.obj \
	wheels/Reckon/README \
	worlds/Sandbox/tracks/Box/Box.mtl \
	worlds/Sandbox/tracks/Box/Box.obj \
	worlds/Sandbox/tracks/Box/Box3.mtl \
	worlds/Sandbox/tracks/Box/Box3.obj \
	worlds/Sandbox/tracks/Box/figure_8.road \
	worlds/Sandbox/tracks/Box/geoms.lst \
	worlds/Sandbox/tracks/Box/in_a_spin.road \
	worlds/Sandbox/tracks/Box/objects.lst \
	worlds/Sandbox/tracks/Box/ramp.obj \
	worlds/Sandbox/tracks/Box/ramp.mtl \
	worlds/Sandbox/tracks/Box/README \
	worlds/Sandbox/tracks/Box/superbowl.road \
	worlds/Sandbox/tracks/Box/surfaces.mtl \
	worlds/Sandbox/tracks/Box/track.conf \
	worlds/Sandbox/tracks/Box/vertigo.road \
	worlds/Sandbox/wheels/Slipstream/wheel.mtl \
	worlds/Sandbox/wheels/Slipstream/wheel.conf \
	worlds/Sandbox/wheels/Slipstream/wheel.obj \
	worlds/Sandbox/wheels/Slipstream/README

